syntax = "proto3";

package proto;

option go_package = "./proto";

import "error.proto";
import "client_info.proto";
import "authentication_type.proto";

service AuthenticationService {
  rpc Auth(AuthRequest) returns (AuthResponse);
  rpc Session(SessionRequest) returns (SessionResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
}

message AuthRequest {
  AuthenticationType auth_type = 1;
  string user = 2;
  string password = 3;
  string access_token = 4;
}

message AuthResponse {
  string token = 1;
  Error error = 2;
}

message SessionRequest {
  string tenant_id = 1;
  string database = 2;
  string source_ip = 3;
  ClientInfo client_info = 4;
  string pool_name = 5;
}

message SessionResponse {
  string context_id = 1;
  Error error = 2;
  string sqream_version = 3;
}

message RefreshTokenRequest{
  string refresh_token = 1;
}

message RefreshTokenResponse{
  string access_token = 1;
  Error error = 2;
}
